myapp/main/default/objects/surveyDataSheets__c/fields/accountContactRole__c.field-meta.xml
<CustomField>
    <fullName>accountContactRole__c</fullName>
    <label>accountContactRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>