myapp/main/default/objects/surveyDataSheets__c/fields/amountOfRoyalLot1__c.field-meta.xml
<CustomField>
    <fullName>amountOfRoyalLot1__c</fullName>
    <label>amountOfRoyalLot1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>