myapp/main/default/objects/surveyDataSheets__c/fields/amountOfRoyalLot2__c.field-meta.xml
<CustomField>
    <fullName>amountOfRoyalLot2__c</fullName>
    <label>amountOfRoyalLot2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>