myapp/main/default/objects/surveyDataSheets__c/fields/amountOfRoyalLotTotal__c.field-meta.xml
<CustomField>
    <fullName>amountOfRoyalLotTotal__c</fullName>
    <label>amountOfRoyalLotTotal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>