myapp/main/default/objects/surveyDataSheets__c/fields/assumedContentInput__c.field-meta.xml
<CustomField>
    <fullName>assumedContentInput__c</fullName>
    <label>assumedContentInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>