myapp/main/default/objects/surveyDataSheets__c/fields/constructionNo__c.field-meta.xml
<CustomField>
    <fullName>constructionNo__c</fullName>
    <label>constructionNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>