myapp/main/default/objects/surveyDataSheets__c/fields/coverageAreaInput__c.field-meta.xml
<CustomField>
    <fullName>coverageAreaInput__c</fullName>
    <label>coverageAreaInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>