myapp/main/default/objects/surveyDataSheets__c/fields/coveragePartsInput__c.field-meta.xml
<CustomField>
    <fullName>coveragePartsInput__c</fullName>
    <label>coveragePartsInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>