myapp/main/default/objects/surveyDataSheets__c/fields/coverageTotalAreaInput__c.field-meta.xml
<CustomField>
    <fullName>coverageTotalAreaInput__c</fullName>
    <label>coverageTotalAreaInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>