myapp/main/default/objects/surveyDataSheets__c/fields/curingSb__c.field-meta.xml
<CustomField>
    <fullName>curingSb__c</fullName>
    <label>curingSb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メインマーク</fullName>
            </value>
            <value>
                <fullName>お客様手配</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>