myapp/main/default/objects/surveyDataSheets__c/fields/customerSignatureSideDate__c.field-meta.xml
<CustomField>
    <fullName>customerSignatureSideDate__c</fullName>
    <label>customerSignatureSideDate</label>
    <type>Date</type>
</CustomField>