myapp/main/default/objects/surveyDataSheets__c/fields/desireDateTimeCb__c.field-meta.xml
<CustomField>
    <fullName>desireDateTimeCb__c</fullName>
    <label>desireDateTimeCb</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>平日</fullName>
            </value>
            <value>
                <fullName>休日</fullName>
            </value>
            <value>
                <fullName>日中</fullName>
            </value>
            <value>
                <fullName>夜間</fullName>
            </value>
            <value>
                <fullName>長期連休</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>