myapp/main/default/objects/surveyDataSheets__c/fields/desireDateTimeCbOtherText__c.field-meta.xml
<CustomField>
    <fullName>desireDateTimeCbOtherText__c</fullName>
    <label>desireDateTimeCbOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>