myapp/main/default/objects/surveyDataSheets__c/fields/equipmentGoodMovementCb__c.field-meta.xml
<CustomField>
    <fullName>equipmentGoodMovementCb__c</fullName>
    <label>equipmentGoodMovementCb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>