myapp/main/default/objects/surveyDataSheets__c/fields/eventDetailsTa__c.field-meta.xml
<CustomField>
    <fullName>eventDetailsTa__c</fullName>
    <label>eventDetailsTa</label>
    <type>TextArea</type>
</CustomField>