myapp/main/default/objects/surveyDataSheets__c/fields/findingsInput__c.field-meta.xml
<CustomField>
    <fullName>findingsInput__c</fullName>
    <label>findingsInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>