myapp/main/default/objects/surveyDataSheets__c/fields/floorAgeInput__c.field-meta.xml
<CustomField>
    <fullName>floorAgeInput__c</fullName>
    <label>floorAgeInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>