myapp/main/default/objects/surveyDataSheets__c/fields/floorSlabDesignThickness__c.field-meta.xml
<CustomField>
    <fullName>floorSlabDesignThickness__c</fullName>
    <label>floorSlabDesignThickness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>