myapp/main/default/objects/surveyDataSheets__c/fields/floorSlabStructure__c.field-meta.xml
<CustomField>
    <fullName>floorSlabStructure__c</fullName>
    <label>floorSlabStructure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有筋床版</fullName>
            </value>
            <value>
                <fullName>無筋床版</fullName>
            </value>
            <value>
                <fullName>スラブ筋</fullName>
            </value>
            <value>
                <fullName>ファイバー</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>