myapp/main/default/objects/surveyDataSheets__c/fields/floorSlabStructureOtherText__c.field-meta.xml
<CustomField>
    <fullName>floorSlabStructureOtherText__c</fullName>
    <label>floorSlabStructureOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>