myapp/main/default/objects/surveyDataSheets__c/fields/floorSurfaceTreatmentSb__c.field-meta.xml
<CustomField>
    <fullName>floorSurfaceTreatmentSb__c</fullName>
    <label>floorSurfaceTreatmentSb</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ペイント</fullName>
            </value>
            <value>
                <fullName>樹脂系</fullName>
            </value>
            <value>
                <fullName>Pタイル</fullName>
            </value>
            <value>
                <fullName>長尺シート</fullName>
            </value>
            <value>
                <fullName>セラミック／石張り</fullName>
            </value>
            <value>
                <fullName>木製タイル</fullName>
            </value>
            <value>
                <fullName>タイルカーペット／絨毯</fullName>
            </value>
            <value>
                <fullName>OAフロアー</fullName>
            </value>
            <value>
                <fullName>ゴム</fullName>
            </value>
            <value>
                <fullName>鉄板／ステンレス</fullName>
            </value>
            <value>
                <fullName>上げ床／小上がり</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>