myapp/main/default/objects/surveyDataSheets__c/fields/floorSurfaceTreatmentSbOtherText__c.field-meta.xml
<CustomField>
    <fullName>floorSurfaceTreatmentSbOtherText__c</fullName>
    <label>floorSurfaceTreatmentSbOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>