myapp/main/default/objects/surveyDataSheets__c/fields/floorUnevennessInput__c.field-meta.xml
<CustomField>
    <fullName>floorUnevennessInput__c</fullName>
    <label>floorUnevennessInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>