myapp/main/default/objects/surveyDataSheets__c/fields/guidelineForConstructionMonth__c.field-meta.xml
<CustomField>
    <fullName>guidelineForConstructionMonth__c</fullName>
    <label>guidelineForConstructionMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>