myapp/main/default/objects/surveyDataSheets__c/fields/guidelineForConstructionYear__c.field-meta.xml
<CustomField>
    <fullName>guidelineForConstructionYear__c</fullName>
    <label>guidelineForConstructionYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>