myapp/main/default/objects/surveyDataSheets__c/fields/identificationOfRepearPoints__c.field-meta.xml
<CustomField>
    <fullName>identificationOfRepearPoints__c</fullName>
    <label>identificationOfRepearPoints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>図面</fullName>
            </value>
            <value>
                <fullName>目視</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>