myapp/main/default/objects/surveyDataSheets__c/fields/improveFloorSlabLowerSurface__c.field-meta.xml
<CustomField>
    <fullName>improveFloorSlabLowerSurface__c</fullName>
    <label>improveFloorSlabLowerSurface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>表層</fullName>
            </value>
            <value>
                <fullName>柱状</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>