myapp/main/default/objects/surveyDataSheets__c/fields/improveFloorSlabLowerSurfaceOtherText__c.field-meta.xml
<CustomField>
    <fullName>improveFloorSlabLowerSurfaceOtherText__c</fullName>
    <label>improveFloorSlabLowerSurfaceOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>