myapp/main/default/objects/surveyDataSheets__c/fields/improvementRequest__c.field-meta.xml
<CustomField>
    <fullName>improvementRequest__c</fullName>
    <label>improvementRequest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>空洞充填</fullName>
            </value>
            <value>
                <fullName>沈下修正</fullName>
            </value>
            <value>
                <fullName>振動対策</fullName>
            </value>
            <value>
                <fullName>沈下抑止対策</fullName>
            </value>
            <value>
                <fullName>その他対策</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>