myapp/main/default/objects/surveyDataSheets__c/fields/improvementRequestOtherText__c.field-meta.xml
<CustomField>
    <fullName>improvementRequestOtherText__c</fullName>
    <label>improvementRequestOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>