myapp/main/default/objects/surveyDataSheets__c/fields/improvementRequestSubsidenceCorrection__c.field-meta.xml
<CustomField>
    <fullName>improvementRequestSubsidenceCorrection__c</fullName>
    <label>improvementRequestSubsidenceCorrection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>タワミ</fullName>
            </value>
            <value>
                <fullName>段差</fullName>
            </value>
            <value>
                <fullName>建付け</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>