myapp/main/default/objects/surveyDataSheets__c/fields/investigationFeeRequestDate__c.field-meta.xml
<CustomField>
    <fullName>investigationFeeRequestDate__c</fullName>
    <label>investigationFeeRequestDate</label>
    <type>Date</type>
</CustomField>