myapp/main/default/objects/surveyDataSheets__c/fields/investigatorInput__c.field-meta.xml
<CustomField>
    <fullName>investigatorInput__c</fullName>
    <label>investigatorInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>