myapp/main/default/objects/surveyDataSheets__c/fields/investigatorQualificationErLevel__c.field-meta.xml
<CustomField>
    <fullName>investigatorQualificationErLevel__c</fullName>
    <label>investigatorQualificationErLevel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>１級</fullName>
            </value>
            <value>
                <fullName>2級</fullName>
            </value>
            <value>
                <fullName>技士補</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>