myapp/main/default/objects/surveyDataSheets__c/fields/investigatorQualificationMeasurement__c.field-meta.xml
<CustomField>
    <fullName>investigatorQualificationMeasurement__c</fullName>
    <label>investigatorQualificationMeasurement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>測量士</fullName>
            </value>
            <value>
                <fullName>測量士補</fullName>
            </value>
            <value>
                <fullName>社内認定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>