myapp/main/default/objects/surveyDataSheets__c/fields/loansFromCustomersInput1__c.field-meta.xml
<CustomField>
    <fullName>loansFromCustomersInput1__c</fullName>
    <label>loansFromCustomersInput1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>