myapp/main/default/objects/surveyDataSheets__c/fields/loansFromCustomersInput2__c.field-meta.xml
<CustomField>
    <fullName>loansFromCustomersInput2__c</fullName>
    <label>loansFromCustomersInput2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>