myapp/main/default/objects/surveyDataSheets__c/fields/loansFromCustomersInput3__c.field-meta.xml
<CustomField>
    <fullName>loansFromCustomersInput3__c</fullName>
    <label>loansFromCustomersInput3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>