myapp/main/default/objects/surveyDataSheets__c/fields/loansFromCustomersType__c.field-meta.xml
<CustomField>
    <fullName>loansFromCustomersType__c</fullName>
    <label>loansFromCustomersType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受領</fullName>
            </value>
            <value>
                <fullName>借用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>