myapp/main/default/objects/surveyDataSheets__c/fields/locationTopography__c.field-meta.xml
<CustomField>
    <fullName>locationTopography__c</fullName>
    <label>locationTopography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>平坦地</fullName>
            </value>
            <value>
                <fullName>谷地</fullName>
            </value>
            <value>
                <fullName>造成地-切土/盛土</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>