myapp/main/default/objects/surveyDataSheets__c/fields/locationTopographyOtherText__c.field-meta.xml
<CustomField>
    <fullName>locationTopographyOtherText__c</fullName>
    <label>locationTopographyOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>