myapp/main/default/objects/surveyDataSheets__c/fields/mattersToAsk__c.field-meta.xml
<CustomField>
    <fullName>mattersToAsk__c</fullName>
    <label>mattersToAsk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>