myapp/main/default/objects/surveyDataSheets__c/fields/mattersToDiscussCustomerTextarea__c.field-meta.xml
<CustomField>
    <fullName>mattersToDiscussCustomerTextarea__c</fullName>
    <label>mattersToDiscussCustomerTextarea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>