myapp/main/default/objects/surveyDataSheets__c/fields/maximumUnevenness1__c.field-meta.xml
<CustomField>
    <fullName>maximumUnevenness1__c</fullName>
    <label>maximumUnevenness1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>