myapp/main/default/objects/surveyDataSheets__c/fields/maximumUnevenness2__c.field-meta.xml
<CustomField>
    <fullName>maximumUnevenness2__c</fullName>
    <label>maximumUnevenness2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>