myapp/main/default/objects/surveyDataSheets__c/fields/noOfFloorInput__c.field-meta.xml
<CustomField>
    <fullName>noOfFloorInput__c</fullName>
    <label>noOfFloorInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>