myapp/main/default/objects/surveyDataSheets__c/fields/onSiteAddressInput__c.field-meta.xml
<CustomField>
    <fullName>onSiteAddressInput__c</fullName>
    <label>onSiteAddressInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>