myapp/main/default/objects/surveyDataSheets__c/fields/paymentConditionInput__c.field-meta.xml
<CustomField>
    <fullName>paymentConditionInput__c</fullName>
    <label>paymentConditionInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>