myapp/main/default/objects/surveyDataSheets__c/fields/personInChargeInput__c.field-meta.xml
<CustomField>
    <fullName>personInChargeInput__c</fullName>
    <label>personInChargeInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>