myapp/main/default/objects/surveyDataSheets__c/fields/possibilityOfShooting__c.field-meta.xml
<CustomField>
    <fullName>possibilityOfShooting__c</fullName>
    <label>possibilityOfShooting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
            <value>
                <fullName>撮影条件有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>