myapp/main/default/objects/surveyDataSheets__c/fields/propertyClassificationInput__c.field-meta.xml
<CustomField>
    <fullName>propertyClassificationInput__c</fullName>
    <label>propertyClassificationInput</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>工場</fullName>
            </value>
            <value>
                <fullName>倉庫</fullName>
            </value>
            <value>
                <fullName>店舗</fullName>
            </value>
            <value>
                <fullName>事務所</fullName>
            </value>
            <value>
                <fullName>犬走り／外構</fullName>
            </value>
            <value>
                <fullName>道路</fullName>
            </value>
            <value>
                <fullName>踏掛版</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>new input</fullName>
            </value>
            <value>
                <fullName>new element rei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>