myapp/main/default/objects/surveyDataSheets__c/fields/propertyClassificationOtherText__c.field-meta.xml
<CustomField>
    <fullName>propertyClassificationOtherText__c</fullName>
    <label>propertyClassificationOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>