myapp/main/default/objects/surveyDataSheets__c/fields/reinforcedFloorSlab__c.field-meta.xml
<CustomField>
    <fullName>reinforcedFloorSlab__c</fullName>
    <label>reinforcedFloorSlab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>シングル</fullName>
            </value>
            <value>
                <fullName>ダブル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>