myapp/main/default/objects/surveyDataSheets__c/fields/repairHistoryTime__c.field-meta.xml
<CustomField>
    <fullName>repairHistoryTime__c</fullName>
    <label>repairHistoryTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>