myapp/main/default/objects/surveyDataSheets__c/fields/repairMethod__c.field-meta.xml
<CustomField>
    <fullName>repairMethod__c</fullName>
    <label>repairMethod</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>打ち替え</fullName>
            </value>
            <value>
                <fullName>増し打ち</fullName>
            </value>
            <value>
                <fullName>部分補修</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>