myapp/main/default/objects/surveyDataSheets__c/fields/repairMethodOtherText__c.field-meta.xml
<CustomField>
    <fullName>repairMethodOtherText__c</fullName>
    <label>repairMethodOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>