myapp/main/default/objects/surveyDataSheets__c/fields/restorationInformationDetail__c.field-meta.xml
<CustomField>
    <fullName>restorationInformationDetail__c</fullName>
    <label>restorationInformationDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>