myapp/main/default/objects/surveyDataSheets__c/fields/scheduleSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>scheduleSubmissionDate__c</fullName>
    <label>scheduleSubmissionDate</label>
    <type>Date</type>
</CustomField>