myapp/main/default/objects/surveyDataSheets__c/fields/scopeOfCorrectionCbbSb__c.field-meta.xml
<CustomField>
    <fullName>scopeOfCorrectionCbbSb__c</fullName>
    <label>scopeOfCorrectionCbbSb</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電気</fullName>
            </value>
            <value>
                <fullName>ガス</fullName>
            </value>
            <value>
                <fullName>エアー</fullName>
            </value>
            <value>
                <fullName>上水</fullName>
            </value>
            <value>
                <fullName>下水・排水</fullName>
            </value>
            <value>
                <fullName>消火栓管</fullName>
            </value>
            <value>
                <fullName>ピット</fullName>
            </value>
            <value>
                <fullName>他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>