myapp/main/default/objects/surveyDataSheets__c/fields/scopeOfCorrectionCbbSbOtherText__c.field-meta.xml
<CustomField>
    <fullName>scopeOfCorrectionCbbSbOtherText__c</fullName>
    <label>scopeOfCorrectionCbbSbOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>