myapp/main/default/objects/surveyDataSheets__c/fields/ServiceControlAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceControlAcceptanceDate__c</fullName>
    <label>ServiceControlAcceptanceDate</label>
    <type>Date</type>
</CustomField>