myapp/main/default/objects/surveyDataSheets__c/fields/siteNameInput__c.field-meta.xml
<CustomField>
    <fullName>siteNameInput__c</fullName>
    <label>siteNameInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>