myapp/main/default/objects/surveyDataSheets__c/fields/sootingItemsInputCb__c.field-meta.xml
<CustomField>
    <fullName>sootingItemsInputCb__c</fullName>
    <label>sootingItemsInputCb</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>建物全景</fullName>
            </value>
            <value>
                <fullName>現場全景</fullName>
            </value>
            <value>
                <fullName>沈下状況</fullName>
            </value>
            <value>
                <fullName>設備・資材等配置状況</fullName>
            </value>
            <value>
                <fullName>床の状況（傾き具合　/　ひび割れ　/　段差　/　損傷具合　など）</fullName>
            </value>
            <value>
                <fullName>現場の状況（建付け・間仕切り壁の開口 / 什器調整 / 床仕上げ／メザニン　など）</fullName>
            </value>
            <value>
                <fullName>埋設関係（電気、ガス、エアー、上水、下水・排水、ピット　など）</fullName>
            </value>
            <value>
                <fullName>補修等箇所（修復範囲、現況　など）</fullName>
            </value>
            <value>
                <fullName>測量基準点（KBM、BMなど）</fullName>
            </value>
            <value>
                <fullName>工事関係（プラント設置箇所、進入路　など）</fullName>
            </value>
            <value>
                <fullName>その他工事に必要な情報</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>