myapp/main/default/objects/surveyDataSheets__c/fields/sootingItemsInputCbOtherText__c.field-meta.xml
<CustomField>
    <fullName>sootingItemsInputCbOtherText__c</fullName>
    <label>sootingItemsInputCbOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>