myapp/main/default/objects/surveyDataSheets__c/fields/specificallyCustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>specificallyCustomerRequest__c</fullName>
    <label>specificallyCustomerRequest</label>
    <type>TextArea</type>
</CustomField>