myapp/main/default/objects/surveyDataSheets__c/fields/stageDifferenceInput1__c.field-meta.xml
<CustomField>
    <fullName>stageDifferenceInput1__c</fullName>
    <label>stageDifferenceInput1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>