myapp/main/default/objects/surveyDataSheets__c/fields/stageDifferenceInput2__c.field-meta.xml
<CustomField>
    <fullName>stageDifferenceInput2__c</fullName>
    <label>stageDifferenceInput2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>