myapp/main/default/objects/surveyDataSheets__c/fields/superStructureInput__c.field-meta.xml
<CustomField>
    <fullName>superStructureInput__c</fullName>
    <label>superStructureInput</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S造（鉄骨)</fullName>
            </value>
            <value>
                <fullName>RC造</fullName>
            </value>
            <value>
                <fullName>プレハブ造</fullName>
            </value>
            <value>
                <fullName>なし／その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>