myapp/main/default/objects/surveyDataSheets__c/fields/superStructureOtherText__c.field-meta.xml
<CustomField>
    <fullName>superStructureOtherText__c</fullName>
    <label>superStructureOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>