myapp/main/default/objects/surveyDataSheets__c/fields/surveyDate__c.field-meta.xml
<CustomField>
    <fullName>surveyDate__c</fullName>
    <label>surveyDate</label>
    <type>Date</type>
</CustomField>