myapp/main/default/objects/surveyDataSheets__c/fields/surveyItemsCb__c.field-meta.xml
<CustomField>
    <fullName>surveyItemsCb__c</fullName>
    <label>surveyItemsCb</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>床レベル計測</fullName>
            </value>
            <value>
                <fullName>土間下空洞量</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>