myapp/main/default/objects/surveyDataSheets__c/fields/surveyItemsCbOtherText__c.field-meta.xml
<CustomField>
    <fullName>surveyItemsCbOtherText__c</fullName>
    <label>surveyItemsCbOtherText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>