myapp/main/default/objects/surveyDataSheets__c/fields/surveyRequestCompanyInput__c.field-meta.xml
<CustomField>
    <fullName>surveyRequestCompanyInput__c</fullName>
    <label>surveyRequestCompanyInput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>